--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<title>Головна сторінка</title>
+		<style type="text/css">
+		h1 { 
+		text-align: center;
+		font-size: 24px;
+		}
+        p{ font-size: 120%;
+		
+		</style>
 	</head>
 	<body>
 		<h1>Персональна сторінка Трищука Богдана Івановича</h1>
+		
 		</body>
 	<p>
 			Мене звати Богдан я з села Отинія.
@@ -16,11 +24,10 @@
 		
 			У вільний час від навчання гуляю, сплю іноді читаю книги.
 		</p>
-		</body>
- <p> <a href="biography.html">Автобіографія</a>
-<p> <a href="novadays.html">Сьогодення</a>
-<p> <a href="friends.html">Друзі</a>
-<p> <a href="gallery.html">Галерея</a>
+<p><a  href="biography.html"style="color:red" >Автобіографія</a> 
+<p><a  href="novadays.html"style="color:blue">Сьогодення</a> 
+<p><a  href="friends.html"style="color:pink">Друзі</a> 
+<p><a  href="gallery.html"style="color:green">Галерея</a> 
  	</body>
 </html>
 		
