--- a/biography.html
+++ b/biography.html
@@ -1,83 +1,125 @@
-<!DOCTYPE html>
-<html>
+<<html>
 	<head>
 		<meta charset="utf-8">
 		<title>Головна сторінка</title>
+		<style type="text/css">
+		
+		h1{ 
+		text-align: center;
+		font-size: 22px;
+		}
+		
+		.rtx{
+		font-style: italic;
+		}
+		
+		.bottom{
+        display: inline-block;
+        background:blue;
+        color:#fff;
+        }
+		
+        .bottom:hover{
+         background:magenta;
+         color:brown;
+        }
+		
+        .bottom:active{
+         background:yellow;
+         color: darkblue;
+        }
+		
+		#zmist{ text-align: center;
+		}
+		
+		h4{
+		font-size: 120%
+		}
+		
+		article{
+		font-size: 120%
+		}
+		
+		.dsr{
+		font-weight:bold;
+		}
+		
+		</style>
 	</head>
 	<body>
 		<h1>Автобіографія Трищука Богдана Івановича</h1>
-		<a href="index.html"><h4>Назад на головну<h4></a>
+		<a href="index.html"class="rtx"><h4>Назад на головну<h4></a>
 		<p><h3 id="zmist" >Зміст<h3>
 		
 		 
-		 <a href="#t1">Базова інформація</a>
-		 <p><a href="#t2">Дитинство</a>
-		 <p><a href="#t3">Шкільні роки</a>
-		 <p><a href="#t5">Університет</a>
+		 <p><a href="#t1"class="bottom">Базова інформація</a>
+		 <p><a href="#t2"class="bottom">Дитинство</a>
+		 <p><a href="#t3"class="bottom">Шкільні роки</a>
+		 <p><a href="#t5"class="bottom">Університет</a>
 		 
 		 
-		 <p><h4 id="t1">Базова інформація</h4>
-		 <header>		 
-		<article>
+		 <h4 id="t1">Базова інформація</h4>
+		 		 
+		<article style="background:yellow;">
 		Народився 25.04.2003 року в смт. Отинія Івано-Франківська обласьть Коломийського району.<br>
 		Дуже рідко коли слухаю музику. <br>
 		Цікавлюсь танцями та спортом.<br>
 		У мене є дуже багато друзів з якими я спілкуюсь.<br>
 		Часто ходжу на дискотеки з друзями.<br>
-		<a href="#zmist">До змісту.</a>
 		</article>
-		</header>
+		<p><a href="#zmist"class="dsr">До змісту</a>
+		
 		
 		
 		<h4 id="t2">Дитинство</h4>
-		<header>
-		<article>
+		
+		<article style="background:blue;">
 		Ріс в звичайній сім'ї.<br>
 		Після садка пішов в Отинійську школу I-III ст.<br>
 		Післч школи часто приходив стомлений тай лягав відпочивати а вже вечером робив домашню.<br>
 		На літо їздив до своєї бабусі в Коломию.<br>
 		Батьки дуже часто бувають за кордоном тому я майже небачсу їх.<br>
-		<a href="#zmist">До змісту</a>
 		</article>
-		</header>
+		<p><a href="#zmist"class="dsr">До змісту</a>
 		
-		<header>
-		<article>
+		
 		<h4 id="t3">Школьні роки</h4>
+		
+		<article style="background:pink;">
 		 В перший клас попав в 6 років.<br>
 		 До 7 класу я був відмінником.<br>
 		 Після сьомого класу я розчарувався в наших вчителях и фактично забиив на навчання.<br>
 		 Уже в 9 класі я вагався чи піти з школи чи залишитись в школі. Батьки мене переконали залишитись до 11 класу.<br>
 		 Любив просто побайдикувати не думаючи про майбутні проблеми.<br>
-		 <a href="#zmist">До змісту.</a>
-		</header>
 		</article>
+		<p><a href="#zmist"class="dsr">До змісту</a>
 		
-		<header>
-		<article>
+		
+		
 		<h4 id="t4">Поза школою</h4>
+		
+		<article style="background:green;">
 		Поза школою був звичаййним підлітком.<br>
 		Ходив гшуляти з друзями.<br>
 		Дуже часто заходи в вихідні дні  до школи.<br>
 		Дуже зацікавився такою японськую культурую як аніме.<br>
 		Дуже часто бив помріяти.<br>
-		<a href="#zmist">До змісту.</a>
-		</header>
 		</article>
+		<p><a href="#zmist"class="dsr">До змісту</a>
 		
-		<header>
-		<article>
+		
 		<h4 id="t5">Університет</h4>
+		
+		<article style="background:red;">
 		Навчаюся у ПНУ в місті Івано-Франківськ.<br>
 		Поступив на плату форму навчання.<br>
 		Не отримую стипендію.<br>
 		Почав освоювати програмування, Web-дизайн, вищу математику.<br>
 		Маю гарних одногрупників<br>
-		<a href="#zmist">До змісту</a>
-		</header>
 		</article>
+		<p><a href="#zmist"class="dsr">До змісту</a>
 		<hr>
 		<p>
-		<a href="#top">Уверх</a>
+		<a href="#top"class="dsr">Уверх</a>
 		</body>
 		</html>
