--- a/friends.html
+++ b/friends.html
@@ -1,65 +1,115 @@
-
 <html>
 	<head>
 		<meta charset="utf-8">
 		<title>Головна сторінка</title>
+		<style type="text/css">
+		h1{
+		font-siz: 22px;
+		text-align: center;
+		}
+		.rtx{
+		font-style: italic;
+		}
+		h2{
+		text-align: center;
+		}
+		.end{
+		text-align: right;
+		}
+		
+		 #fonarik
+ {
+  text-align:center;
+  font-weight:bold;
+ }
+ 
+.number_one
+{
+background-color:#808080;
+color:#FFD700;
+}
+
+.number_two
+{
+background-color:#FFFFFF;
+color:#FF4500;
+}
+
+
+ .green
+ {
+ background-color:#008000;
+color:#FF00FF;
+ }		
+ table
+ {
+ border-collapse: collapse;
+ border: 3px solid black;
+ }
+ 
+ 
+ 
+ 
+ 
+		</style>
 	</head>
 	<body>
 		<h1>Друзі Трищука Богдана Івановича</h1>
 		</body>
 		<p>
-		<a href="index.html">Назад на головну</a>
+		<a href="index.html"class="rtx">Назад на головну</a>
 		</p>
 		
 		<h2>Мої друзі</h2>
 		<table border="1">
-		<captin> Таблиця друзів </captin>
+		<th colspan= "6">  Таблиця друзів </th>
 		<tbody>
-		<tr>
+		<tr id="fonarik" class="green">
 		<td>Прізвище</td>
 		<td>Ім'я</td>
 		<td>Дата народження</td>
 		<td>Адресса проживання</td> 
 		<td> Контактний телефон</td>
-		<td> Любима страва</td>
+		<td class="end" > Любима страва</td>
 		</tr>
-		<tr><td> Кондрат </td>
+		<tr id="fonarik" class="number_one" >
+		<td> Кондрат </td>
 		<td> Юра </td>
 		<td> 23.10.2000 </td>
 		<td> м.Івано-Франківськ, вул.Матейки </td>
 		<td> 0974286835 </td>
-		<td> Пельмені </td>
+		<td class="end"> Пельмені </td>
 		</tr>
-		<tr>
+		<tr id="fonarik" class="number_two">
 		<td> Васильчук </td>
 		<td> Володимир </td>
 		<td> 10.1.1980 </td>
 		<td> м.Івано-Франківськ, вул.Коновальця</td>
 		<td> 405032321 </td>
-		<td> Борш </td>
+		<td class="end"> Борш </td>
 		</tr>
-		<tr>
+		<tr id="fonarik" class="number_one">
 		<td> Кропивницькій </td>
 		<td> Назар</td>
 		<td> 25.3.2003</td>
 		<td> м.Івано-Франківськ,вул. Симоненка </td>
 		<td> 0983833476 </td>
-		<td> Банош </td>
+		<td class="end"> Банош </td>
 		</tr>
-		<tr>
+		<tr id="fonarik" class="number_two">
 		<td> Дручків </td>
 		<td> Іван </td>
 		<td> 1.1.2001</td>
 		<td> м.Івано-Франківськ, вул.Матейки </td>
 		<td> 0663742489</td>
-		<td> Енергетичний напій "NonStop"  </td>
+		<td class="end"> Енергетичний напій "NonStop"  </td>
 		</tr>
-		<tr>
+		<tr id="fonarik" class="number_one">
 		<td> Максимюк </td>
 		<td> Максим</td>
 		<td> 27.3.1749 </td>
 		<td> м.Івано-Франківськ,вул. Академія Сахарова </td>
 		<td> 756319824</td>
-		<td> Джурек </td>
+		<td class="end"> Джурек </td>
 		</tr>
 		
