--- a/gallery.html
+++ b/gallery.html
@@ -1,22 +1,40 @@
-<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<title>Головна сторінка</title>
+		<style type="text/css">
+		h1{
+		font-size: 20px;
+		text-align: center;
+		}
+		.rtx{
+		font-style: italic;
+		}
+		h2{
+		text-align: center;
+		}
+		h3{
+		text-align: center;
+		}
+		.amg{
+		text-align: center;
+		}
+			
+		</style>
 	</head>
 	<body>
 		<h1>Галерея Трищука Богдана Івановича</h1>
 		<p>
-		<a href="index.html">Назад на головну</a>
+		<a href="index.html"class="rtx">Назад на головну</a>
 		</p>
 		
 		<h2>Мої зображення</h>
 		<h3>Зображення у цій папці</h3>
-		<img src="11.jpg" alt>
+		<p class="amg"><img  src="11.jpg" alt>
 		<h3>Зображення у папці</h3>
-		<img src="images\12.jpg" alt>
+		<p class="amg"><img  src="images\12.jpg" alt>
 		<h3>Зображення онлайн</h3>
-		<img src="http://lorempixel.com/output/food-q-c-1280-1024-8.jpg" alt>
+		<p class="amg"><img  src="http://lorempixel.com/output/food-q-c-1280-1024-8.jpg" alt>
 		<hr>
 		<p>
 		<a href="#top">Уверх</a>
